@@ -1,4 +1,5 @@
 - Introduced the archive_address feature, see etc/example.conf for the details
+- Introduced the raw: search label
 
 1.3.12:
 -------
